--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
    
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://domínio.com">
-    <meta property="og:title" content="Conteúdo Exclusivo">
-    <meta property="og:description" content="Conteúdo Exclusivo">
+    <meta property="og:url" content="vitasalud.online">
+    <meta property="og:title" content="Contenido exclusivo">
+    <meta property="og:description" content="Contenido exclusivo">
     <meta property="og:image" content="https://img.imageboss.me/atm/cdn/format:auto/u/umsGbYu2QNOfeAn5fEqSwCDI4VE3/l/rBhIAv7621085.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
   <!-- Título da Página -->
-  <title>Conteúdo Exclusivo!</title>
+  <title>Contenido Exclusivo!</title>
 
   <style type="text/css">
     header {
@@ -42,6 +42,7 @@
         <div class="col-lg-8 text-center">
           
           <!-- VSL -->
+           <div id="vid_662857ce8f02ae000735808d" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_662857ce8f02ae000735808d" src="https://images.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/662857ce8f02ae000735808d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_662857ce8f02ae000735808d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_662857ce8f02ae000735808d"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/662857ce8f02ae000735808d/player.js", s.async=!0,document.head.appendChild(s); </script>
 
            
           <link rel="prerender" href="https://pay.hotmart.com/123456789?checkoutMode=10"/>
@@ -87,7 +88,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Eu fiz essa receita que falaram no final do vídeo por 21 dias e os resultados foram incríveis!</td>
+                    <td class="fb-comments-comment-text">He seguido esa receta que mencionaron al final del vídeo durante 21 días y los resultados fueron increíbles!</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -115,7 +116,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Aqui em <span id="address" style="color:#000000;">Salvador</span> só falam dessa receita, muito saborosa...</td>
+                    <td class="fb-comments-comment-text">Aqui em <span id="address" style="color:#000000;">Bogotá</span> Solo hablan de esta receta, ¡muy sabrosa!</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -143,7 +144,8 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Eu consegui reduzir 4 números e agora me sinto muito mais confiante</td>
+                    <td class="fb-comments-comment-text">
+He logrado reducir el azúcar en mi sangre y ahora me siento mucho más confiado</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -171,7 +173,8 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Essa receita é muito fácil de fazer, não interfere na minha rotina diária</td>
+                    <td class="fb-comments-comment-text">
+Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -199,7 +202,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Maravilha, estou fazendo a poucos dias e já está funcionando para mim</td>
+                    <td class="fb-comments-comment-text">¡Maravilloso, llevo pocos días haciéndolo y ya está funcionando para mí!</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -227,7 +230,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Me surpreendi com a rapidez dos resultados, emagreci de forma consistente e saudável</td>
+                    <td class="fb-comments-comment-text">Me sorprendió la rapidez de los resultados, realmente ayudó a controlar mi diabetes</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -256,7 +259,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Parabéns por divuldar algo que realmente funciona!!!</td>
+                    <td class="fb-comments-comment-text">¡GRACIAS por difundir algo que realmente funciona!</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -288,7 +291,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Esse segredinho mudou minha relação com a comida, agora sinto que tenho mais controle sobre minhas escolhas</td>
+                      <td class="fb-comments-comment-text">Este secreto cambió mi vida, ya no siento tantos dolores de cabeza y he notado una mejora en mi circulación.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -317,7 +320,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">A sensação de bem-estar que esse segredo proporciona é indescritível, sinto que meu corpo está mais saudável</td>
+                      <td class="fb-comments-comment-text">La sensación de bienestar que este secreto proporciona es indescriptible, sentí el cambio en los primeros días.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -346,7 +349,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Esse produto é a solução perfeita para quem busca emagrecer sem sacrifícios ou sofrimentos</td>
+                      <td class="fb-comments-comment-text">Este producto fue la solución perfecta para mí, ya que había probado de todo y no obtenía resultados</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -374,7 +377,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Olá! Eu sou a Elizabeth, tenho 42 anos e quero compartilhar minha história com você. Há algum tempo, minha saúde estava em risco... minha pressão estava elevada, meus exames estavam péssimos e eu estava quase desenvolvendo diabetes. Foi então que descobri esse método incrível e decidi dar uma chance. Em apenas um mês e meio, consegui perder 6 quilos e minha pressão voltou ao normal. Além disso, minha autoestima tem melhorado a cada dia. Estou muito grata por ter encontrado essa solução e queria compartilhar minha experiência com vocês</td>
+                      <td class="fb-comments-comment-text">¡Hola! Soy Elizabeth, tengo 42 años y quiero compartir mi historia contigo. Hace algún tiempo, mi salud estaba en riesgo... mi presión arterial estaba alta, mis exámenes eran malos y tenía un grave problema de diabetes. Fue entonces cuando descubrí este método increíble y decidí darle una oportunidad. En solo 10 días, noté una reducción en mi nivel de azúcar en la sangre y mi presión volvió a la normalidad. Estoy muy agradecida por haber encontrado esta solución y quería compartir mi experiencia contigo</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
