--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="pt-BR" dir="ltr">
 
 <head>
-   
-    <meta property="og:type" content="website">
+
+
+   <link rel="preload" href="https://scripts.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/662857ce8f02ae000735808d/player.js" as="script">
+<link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
+<link rel="preload" href="https://images.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/662857ce8f02ae000735808d/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/662856d0ece92700071c302e/main.m3u8" as="fetch">
+<link rel="dns-prefetch" href="https://cdn.converteai.net">
+<link rel="dns-prefetch" href="https://scripts.converteai.net">
+<link rel="dns-prefetch" href="https://images.converteai.net">
+<link rel="dns-prefetch" href="https://api.vturb.com.br">
+
+   <meta property="og:type" content="website">
     <meta property="og:url" content="vitasalud.online">
     <meta property="og:title" content="Contenido exclusivo">
     <meta property="og:description" content="Contenido exclusivo">
@@ -406,7 +416,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Eu já estou começando a notar minhas roupas ficando mais largas também. Obrigado por compartilhar sua experiência comigo!</td>
+                      <td class="fb-comments-comment-text">Me siento menos cansada y con menos debilidad en solo 4 días haciendo la receta. Gracias por compartir tu experiencia conmigo.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -429,7 +439,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
             <div id="cta2" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/123456789?checkoutMode=10" class="btn btn-success btn-lg btn-block" style="text-decoration: none;">
               <br>
-              <span class="span-btn">COMPRAR AGORA!</span>
+              <span class="span-btn">COMPRAR AHORA!</span>
               <br>
               </a>
             </div>
