--- a/br/index.html
+++ b/br/index.html
@@ -67,19 +67,19 @@ document.write ("<br><h5> Cupom de desconto válido até hoje, <b>" + dayName[no
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
 
-                <h5>Eu não quero que o dinheiro seja um <u><i>problema</i></u> quando se trata de alcançar o corpo ideal...<br><br>
+                <h5>No quiero que el dinero sea un <u><i>problema</i></u> cuando se trata de mejorar la calidad de vida....<br><br>
 
-É por isso que estamos comprometidos em oferecer soluções <b><u>acessíveis e eficazes</u></b> para você...<br><br>
+Es por eso que estamos comprometidos en ofrecer soluciones <b><u>accesibles y eficaces</u></b> para ti...<br><br>
 
-E para tornar as coisas ainda melhores, temos uma <i><u>oferta especial</u></i> que pode ser exatamente o que você estava procurando!<br><br>
+Y para hacer las cosas aún mejores, tenemos una <i><u>oferta especial</u></i> que puede ser exactamente lo que estabas buscando!<br><br>
 
-Acreditamos que todos merecem a chance de aproveitar os benefícios de nosso "Nome do Produto" <i>sem que o custo seja um empecilho</i>...<br><br>
+Creemos que todos merecen la oportunidad de disfrutar de los beneficios de nuestro "Ritual de la Canela" <i>sin que el costo sea un obstáculo.</i>...<br><br>
 
-Por essa razão, criamos um programa exclusivo em que selecionamos <u>aleatoriamente</u> <b><u><i>uma pessoa</i></u></b> a cada <b>50 visitantes</b> de nossa página para receber uma oferta especial.<br><br>
+v <u>aleatoriamente</u> <b><u><i>una persona</i></u></b> a cada <b>50 visitantes</b> de nuestra página para recibir una oferta especial.<br><br>
 
-<b>E, acredite ou não, desta vez você foi a sortuda escolhida!</b><br><br>
+<b>¡Y, créalo o no, esta vez tú fuiste la afortunada seleccionada!</b><br><br>
 
-Gostaríamos de lhe dar a oportunidade única de adquirir o "Nome do Produto" com um <u>desconto incrível de <span style="color: #00FF00"><b>R$ 100,00</b></span>!</u><br><br>
+Nos gustaría brindarte la oportunidad única de adquirir el "Ritual de la Canela" con un <u>descuento increíble. de <span style="color: #00FF00"><b>$10,00</b></span>!</u><br><br>
 
 Essa é a nossa forma de mostrar o quanto <u><i>valorizamos</i></u> a sua presença e acreditamos no potencial transformador de nosso produto...<br><br>
 
