--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Aqui em <span id="address" style="color:#000000;">Bogotá</span> Solo hablan de esta receta, ¡muy sabrosa!</td>
+                    <td class="fb-comments-comment-text">Aqui em <span id="address" style="color:#000000;">Bogotá</span> solo hablan de esta receta, ¡muy sabrosa!</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
