--- a/index.html
+++ b/index.html
@@ -450,11 +450,11 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
 
   <footer class="bg-white py-3 text-center">
 
-    <span style="color:#6C757D">Copyright 2024 – Conteúdo Exclusivo ®
-        <br>Todos os direitos reservados.</span><br><br>
+    <span style="color:#6C757D">Copyright 2024 – Contenido exclusivo ® ®
+        <br>Todos Los Derechos Reservados.</span><br><br>
 
       <div class="text-secondary"><a href="termos.html" class="text-secondary">Termos de Uso</a> – <a href="privacidade.html"
-          class="text-secondary">Políticas de Privacidade</a></div><br>
+          class="text-secondary">Políticas de privacidad</a></div><br>
 
 <script>
     let prefix = ["https://payment.hotmart.com", "https://pay.hotmart.com", "https://go.hotmart.com"];
