--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
     <span style="color:#6C757D">Copyright 2024 – Contenido exclusivo ® ®
         <br>Todos Los Derechos Reservados.</span><br><br>
 
-      <div class="text-secondary"><a href="termos.html" class="text-secondary">Termos de Uso</a> – <a href="privacidade.html"
+      <div class="text-secondary"><a href="termos.html" class="text-secondary">Terminos de Uso</a> – <a href="privacidade.html"
           class="text-secondary">Políticas de privacidad</a></div><br>
 
 <script>
