--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
 <head>
 
- <link rel="preload" href="https://scripts.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/662857ce8f02ae000735808d/player.js" as="script">
+<link rel="preload" href="https://scripts.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/6628521105334f0008a07449/player.js" as="script">
 <link rel="preload" href="https://cdn.converteai.net/lib/js/smartplayer/v1/smartplayer.min.js" as="script">
-<link rel="preload" href="https://images.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/662857ce8f02ae000735808d/thumbnail.jpg" as="image">
-<link rel="preload" href="https://cdn.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/662856d0ece92700071c302e/main.m3u8" as="fetch">
+<link rel="preload" href="https://images.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/6628521105334f0008a07449/thumbnail.jpg" as="image">
+<link rel="preload" href="https://cdn.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/662851e82431a80007a3e034/main.m3u8" as="fetch">
 <link rel="dns-prefetch" href="https://cdn.converteai.net">
 <link rel="dns-prefetch" href="https://scripts.converteai.net">
 <link rel="dns-prefetch" href="https://images.converteai.net">
 <link rel="dns-prefetch" href="https://api.vturb.com.br">
-
- <meta property="og:type" content="website">
-    <meta property="og:url" content="vitasalud.online">
-    <meta property="og:title" content="Contenido exclusivo">
-    <meta property="og:description" content="Contenido exclusivo">
+   
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lp1.vitasalud.online">
+    <meta property="og:title" content="Contenido Exclusivo">
+    <meta property="og:description" content="Contenido Exclusivo">
     <meta property="og:image" content="https://img.imageboss.me/atm/cdn/format:auto/u/umsGbYu2QNOfeAn5fEqSwCDI4VE3/l/rBhIAv7621085.png">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
   <!-- Título da Página -->
-  <title>Contenido Exclusivo!</title>
+  <title>Contenido exclusivo!</title>
 
   <style type="text/css">
     header {
@@ -51,8 +51,7 @@
         <div class="col-lg-8 text-center">
           
           <!-- VSL -->
-          <div id="vid_662857ce8f02ae000735808d" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_662857ce8f02ae000735808d" src="https://images.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/662857ce8f02ae000735808d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_662857ce8f02ae000735808d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_662857ce8f02ae000735808d"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/662857ce8f02ae000735808d/player.js", s.async=!0,document.head.appendChild(s); </script>
-
+         <div id="vid_6628521105334f0008a07449" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_6628521105334f0008a07449" src="https://images.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/6628521105334f0008a07449/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_6628521105334f0008a07449" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_6628521105334f0008a07449"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/6628521105334f0008a07449/player.js", s.async=!0,document.head.appendChild(s); </script>
            
           <link rel="prerender" href="https://pay.hotmart.com/123456789?checkoutMode=10"/>
 
@@ -60,7 +59,7 @@
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/123456789?checkoutMode=10" class="btn btn-success btn-lg btn-block" style="text-decoration: none;">
               <br>
-              <span class="span-btn">COMPRAR AGORA!</span>   
+              <span class="span-btn">QUIERO ASEGURAR ACCESO!</span>   
               <br>
               </a>
             </div>
@@ -92,12 +91,12 @@
                     <td rowspan="3" class="fb-comments-comment-img"><img src="./assets/img/comentarios/m2.jpeg"></td>
                     <td>
                       <font class="fb-comments-comment-name">
-                        <name>Tereza Mendonça</name>
+                        <name>Lucía García</name>
                       </font>
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">He seguido esa receta que mencionaron al final del vídeo durante 21 días y los resultados fueron increíbles!</td>
+                    <td class="fb-comments-comment-text">¡Este vídeo fue un gran descubrimiento! Dudé al principio, pero utilicé este hallazgo y fue increíble lo que me sucedió. Antes sentía mucho dolor en todo el cuerpo, vivía a base de medicamentos todos los días, pero después de usar este descubrimiento, me liberé del dolor.</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -120,12 +119,12 @@
                     <td rowspan="3" class="fb-comments-comment-img"><img src="./assets/img/comentarios/m3.jpeg"></td>
                     <td>
                       <font class="fb-comments-comment-name">
-                        <name>Josefa Perez</name>
+                        <name>Ana Perez</name>
                       </font>
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Aqui en <span id="address" style="color:#000000;">Bogotá</span> solo hablan de esta receta, ¡muy sabrosa!</td>
+                    <td class="fb-comments-comment-text">Aqui en <span id="address" style="color:#000000;">Equador</span> solo se habla de este descubrimiento. Pueden usarlo sin miedo. Lo probé por recomendación de un amigo que sufría de ansiedad. Antes sentía mucho dolor en las rodillas y en la espalda, pero desde que empecé a usar esta frecuencia ya no siento nada. Llevo usando esta frecuencia solo 7 días y ya me siento curada.</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -133,7 +132,7 @@
                       ·
                       <reply>Responder</reply>
                       ·
-                      <likes>9</likes>
+                      <likes>19</likes>
 
                       <date>5 min</date>
                     </td>
@@ -148,13 +147,12 @@
                     <td rowspan="3" class="fb-comments-comment-img"><img src="./assets/img/comentarios/m4.jpeg"></td>
                     <td>
                       <font class="fb-comments-comment-name">
-                        <name>Maria Carmen</name>
+                        <name>Maria Carmen Rodríguez</name>
                       </font>
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">
-He logrado reducir el azúcar en mi sangre y ahora me siento mucho más confiado</td>
+                    <td class="fb-comments-comment-text">Yo sufría de muchos desmayos, mareos, zumbidos en los oídos y mi presión arterial era muy alta. Decidí probar este descubrimiento porque estaba cansada de tomar tantos medicamentos. ¡Estoy muy feliz porque gracias a este video me siento curada! Mi presión ya no está alta y ahora llevo una vida completamente diferente. ¡Muchas gracias por este video!</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -177,13 +175,12 @@ He logrado reducir el azúcar en mi sangre y ahora me siento mucho más confiado
                     <td rowspan="3" class="fb-comments-comment-img"><img src="./assets/img/comentarios/h2.jpeg"></td>
                     <td>
                       <font class="fb-comments-comment-name">
-                        <name>Carlos Castro</name>
+                        <name>Carlos Fernández</name>
                       </font>
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">
-Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
+                    <td class="fb-comments-comment-text">Yo sufría muchas dolores en el cuerpo y estaba estresado por mi trabajo. Ya estaba al límite cuando mi esposa me habló sobre el descubrimiento de una frecuencia. Al principio pensé que era una tontería, pero ella también experimentaba muchas dolores de cabeza y dificultades para dormir. Cambió completamente en 5 días usando el descubrimiento, así que decidí probarlo también. Por eso estoy aquí, para decir que realmente funciona. Mi esposa y yo notamos la diferencia. Estoy muy feliz y agradecido.</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -211,7 +208,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">¡Maravilloso, llevo pocos días haciéndolo y ya está funcionando para mí!</td>
+                    <td class="fb-comments-comment-text">Regresé aquí para compartir mi experiencia. ¡Estoy impresionada de cómo este video ha cambiado mi vida! Sentía fuertes dolores de cabeza, espalda y mucha dificultad para dormir. Había probado de todo. Tomaba muchos y muchos medicamentos y nada funcionaba. Hasta que descubrí este hallazgo y decidí probarlo. En los primeros días me sentí más relajada, con más energía, logro dormir mejor e incluso me siento más feliz.</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -239,7 +236,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">Me sorprendió la rapidez de los resultados, realmente ayudó a controlar mi diabetes</td>
+                    <td class="fb-comments-comment-text">Me sorprendí con el resultado. Sentía que estaba olvidando cosas, como si mi mente estuviera débil. Olvidaba las llaves, dónde ponía mi bolso y cosas simples del día a día. Ya estaba empezando a preocuparme, temiendo que fuera algún tipo de demencia o Alzheimer. Fue entonces cuando encontré este video y rápidamente puse el descubrimiento en práctica. Siento que mi mente ha cambiado por completo. Ya no tengo los episodios de olvido que solía tener.</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -268,7 +265,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                     </td>
                   </tr>
                   <tr>
-                    <td class="fb-comments-comment-text">¡GRACIAS por difundir algo que realmente funciona!</td>
+                    <td class="fb-comments-comment-text">¡Enhorabuena por difundir algo que realmente funciona!!!!</td>
                   </tr>
                   <tr>
                     <td class="fb-comments-comment-actions">
@@ -300,7 +297,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Este secreto cambió mi vida, ya no siento tantos dolores de cabeza y he notado una mejora en mi circulación.</td>
+                      <td class="fb-comments-comment-text">¡Puedo atestiguar que realmente funciona! ¡Mis dolores de cabeza y de rodillas desaparecieron en solo 5 días de uso! ¡He recomendado este vídeo a toda mi familia!</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -329,7 +326,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">La sensación de bienestar que este secreto proporciona es indescriptible, sentí el cambio en los primeros días.</td>
+                      <td class="fb-comments-comment-text">La sensación de bienestar que este secreto proporciona es indescriptible, ¡me siento como una persona completamente nueva! ¡Sin dolores, sin insomnio y sin la necesidad de tantos medicamentos!</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -358,7 +355,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Este producto fue la solución perfecta para mí, ya que había probado de todo y no obtenía resultados</td>
+                      <td class="fb-comments-comment-text">Estaba sufriendo de falta de aire, fatiga y hinchazón en todo el cuerpo. Ya había visitado varios médicos y nada se solucionaba. Hasta que una colega de trabajo me habló sobre este video. Después de ver este video y aplicar lo que enseña, ¡mi vida cambió por completo! Mi falta de aire desapareció y mi salud volvió a la normalidad.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -381,12 +378,12 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                       <td rowspan="3" class="fb-comments-comment-img"><img src="./assets/img/comentarios/m17.jpeg"></td>
                       <td>
                         <font class="fb-comments-comment-name">
-                          <name>Marta Gomez</name>
+                          <name>Carmen Gomez</name>
                         </font>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">¡Hola! Soy Elizabeth, tengo 42 años y quiero compartir mi historia contigo. Hace algún tiempo, mi salud estaba en riesgo... mi presión arterial estaba alta, mis exámenes eran malos y tenía un grave problema de diabetes. Fue entonces cuando descubrí este método increíble y decidí darle una oportunidad. En solo 10 días, noté una reducción en mi nivel de azúcar en la sangre y mi presión volvió a la normalidad. Estoy muy agradecida por haber encontrado esta solución y quería compartir mi experiencia contigo</td>
+                      <td class="fb-comments-comment-text">Olá! Soy Carmen, tengo 45 años y quiero compartir mi historia contigo. Hace algún tiempo, mi salud estaba en riesgo... mi presión arterial estaba alta, mis exámenes eran malos y estaba al borde de desarrollar diabetes. Fue entonces cuando descubrí este método increíble y decidí darle una oportunidad. En solo 10 días, mi presión arterial volvió a la normalidad. Estoy muy agradecida por haber encontrado esta solución y quería compartir mi experiencia contigo.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -415,7 +412,7 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
                       </td>
                     </tr>
                     <tr>
-                      <td class="fb-comments-comment-text">Me siento menos cansada y con menos debilidad en solo 4 días haciendo la receta. Gracias por compartir tu experiencia conmigo.</td>
+                      <td class="fb-comments-comment-text">Uma colega de trabalho estaba muy estresada y ansiosa. Noté el cambio en ella y ella me contó sobre este vídeo. Decidí probarlo porque también estaba muy estresada y tenía dificultades para dormir debido al insomnio. Estoy encantada de lo mucho mejor que me siento después de poner en práctica lo que enseña este vídeo.</td>
                     </tr>
                     <tr>
                       <td class="fb-comments-comment-actions">
@@ -449,11 +446,11 @@ Esta receta es muy fácil de hacer, no interfiere en mi rutina diaria</td>
 
   <footer class="bg-white py-3 text-center">
 
-    <span style="color:#6C757D">Copyright 2024 – Contenido exclusivo ® ®
-        <br>Todos Los Derechos Reservados.</span><br><br>
+    <span style="color:#6C757D">Copyright 2024 – Contenido Exclusivo ®
+        <br>Todos los derechos reservados.</span><br><br>
 
-      <div class="text-secondary"><a href="termos.html" class="text-secondary">Terminos de Uso</a> – <a href="privacidade.html"
-          class="text-secondary">Políticas de privacidad</a></div><br>
+      <div class="text-secondary"><a href="termos.html" class="text-secondary">Términos de usoo</a> – <a href="privacidade.html"
+          class="text-secondary">Política de privacidad</a></div><br>
 
 <script>
     let prefix = ["https://payment.hotmart.com", "https://pay.hotmart.com", "https://go.hotmart.com"];
