--- a/br/index.html
+++ b/br/index.html
@@ -57,7 +57,7 @@ now = new Date
 <div class="banner py-lg-1 py-sm-1 center white">
 <script language=javascript type="text/javascript">
 now = new Date
-document.write ("<br><h5> Cupom de desconto válido até hoje, <b>" + dayName[now.getDay() ] + ", " + now.getDate () + " de " + monName [now.getMonth() ]   +  " de "  +     now.getFullYear () + "! </b></h5><br>")
+document.write ("<br><h5>Cupón de descuento válido hasta hoy., <b>" + dayName[now.getDay() ] + ", " + now.getDate () + " de " + monName [now.getMonth() ]   +  " de "  +     now.getFullYear () + "! </b></h5><br>")
 
 </script>
     </div>
@@ -73,72 +73,74 @@ Es por eso que estamos comprometidos en ofrecer soluciones <b><u>accesibles y ef
 
 Y para hacer las cosas aún mejores, tenemos una <i><u>oferta especial</u></i> que puede ser exactamente lo que estabas buscando!<br><br>
 
-Creemos que todos merecen la oportunidad de disfrutar de los beneficios de nuestro "Ritual de la Canela" <i>sin que el costo sea un obstáculo.</i>...<br><br>
+Creemos que todos merecen la oportunidad de disfrutar de los beneficios de nuestro Frecuencia Divina de Prosperidade <i>sin que el costo sea un obstáculo.</i>...<br><br>
 
 v <u>aleatoriamente</u> <b><u><i>una persona</i></u></b> a cada <b>50 visitantes</b> de nuestra página para recibir una oferta especial.<br><br>
 
 <b>¡Y, créalo o no, esta vez tú fuiste la afortunada seleccionada!</b><br><br>
 
-Nos gustaría brindarte la oportunidad única de adquirir el "Ritual de la Canela" con un <u>descuento increíble. de <span style="color: #00FF00"><b>$10,00</b></span>!</u><br><br>
+Nos gustaría brindarte la oportunidad única de adquirir el Frecuencia Divina de Prosperidade con un <u>descuento increíble. de <span style="color: #00FF00"><b>$10,00</b></span>!</u><br><br>
 
-Essa é a nossa forma de mostrar o quanto <u><i>valorizamos</i></u> a sua presença e acreditamos no potencial transformador de nosso produto...<br><br>
+Esta es nuestra manera de mostrar cuánto <u><i>valoramos</i></u>tu presencia y creemos en el potencial transformador de nuestro producto...<br><br>
 
-Não queremos que você deixe essa <u>chance escapar</u>, pois sabemos que essa oferta é um passo importante em direção ao<b> corpo dos seus sonhos</b>...<br><br>
+No queremos que dejes esta <u>oportunidad escapar</u>, pues sabemos que esta oferta es un paso importante hacia el<b> logro de una vida próspera y abundante.</b>...<br><br>
 
-Com o "Nome do Produto", você terá acesso a recursos e tecnologias avançadas que irão ajudá-la a atingir seus objetivos de forma <u>eficiente e segura</u>...<br><br>
+Con la Frecuencia Divina de Prosperidade, tendrás acceso a recursos y tecnologías avanzadas que te ayudarán a alcanzar tus objetivos de manera--++ <u>eficiente y segura</u>...<br><br>
 
-Aproveite essa oportunidade única de adquirir o "Nome do Produto" com um desconto de <span style="color: #00FF00"><b>R$ 100,00</b></span> e comece a trilhar o caminho para alcançar o <b><u>corpo ideal que você sempre desejou</u></b>...<br><br>
+aproveche esta oportunidad única de adquirir la Frecuencia Divina de Prosperidade con un descuento del <span style="color: #00FF00"><b>R$ 100,00</b></span> y comienza a recorrer el camino para alcanzar el <b><u>camino hacia una vida de salud, prosperidad y abundancia.</u></b>...<br><br>
 
-<b><u><i>Estamos aqui para apoiá-la em cada etapa dessa jornada...</i></u></b><br><br>
+<b><u><i>Estamos aquí para apoyarte en cada etapa de esta jornada....</i></u></b><br><br>
 
-Não deixe que o dinheiro seja um <u><i>obstáculo</i></u> para o seu <b><u>sucesso pessoal</u></b>...<br><br>
+Não dejes que el dinero sea un <u><i>obstáculo</i></u> para tu <b><u>éxito personal</u></b>...<br><br>
 
-Garanta agora mesmo o seu "Nome do Produto" com esse desconto especial e dê um impulso extraordinário aos seus esforços de transformação corporal...<br><br>
+Asegura ahora mismo tu "Frecuencia Divina de Prosperidade" com este descuento especial y dale un impulso extraordinario para alcanzar tu transformación personal...<br><br>
 
-Seja bem-vinda à nossa <b>comunidade</b> de pessoas comprometidas em buscar a melhor versão de si mesmas...<br><br>
+¡Bienvenido a nuestra <b>comunidad</b> e personas comprometidas en buscar la mejor versión de sí mismas, disfrutando plenamente de la abundancia, salud y prosperidad que han alcanzado!...<br><br>
 
-Junte-se a nós e experimente os resultados incríveis que o "Nome do Produto" pode proporcionar!<br><br></h5>
+¡Únete a nosotros y experimenta los increíbles resultados que la Frequencia Divina de Prosperidad puede proporcionar!<br><br></h5>
                 <br>
                 <a href="https://pay.hotmart.com/W75115719G?off=i28b6yhu&checkoutMode=10" class="btn btn-success btn-lg btn-block" style="text-decoration: none;"><br><span class="span-btn">COMPRAR AGORA!</span></br></a>
                 
-                    <br><br><h5>Essa opção abrirá uma nova e emocionante etapa em sua vida, <u>repleta de prazeres e realizações</u>!<br><br>
+                    <br><br><h5>¡Esta opción abrirá una nueva y emocionante etapa en tu vida, <u>repleta de placeres y logros</u>!<br><br>
 
-<i>Agora, permita-me levar sua imaginação a um lugar extraordinário...</i><br><br>
+<i>Ahora, permíteme llevar tu imaginación a un lugar extraordinario...</i><br><br>
 
-Imagine descobrir um segredo genuíno capaz de <b><u><i>transformar seu corpo</i></u></b>, ao mesmo tempo em que <u>liberta você do estresse e da ansiedade</u> que podem pesar em sua vida diária...<br><br>
+Imagina descubrir un secreto genuino capaz de <b><u><i>transformar tu vida</i></u></b>, al mismo tiempo que <u>te libera del estrés y la ansiedad</u> que pueden afectar tu vida diaria...<br><br>
 
-Visualize como sua vida se tornará significativamente melhor: <i>uma vida repleta de felicidade, autoconfiança renovada e todos os outros benefícios positivos</i> que o "Nome do Produto" tem para oferecer...<br><br>
+Visualiza cómo tu vida se volverá significativamente mejor: <i>una vida llena de felicidad, renovada confianza en ti mismo y todos los demás beneficios positivos</i> que la Frecuencia Divina de Prosperidade tiene para ofrecer...<br><br>
 
-Estamos falando de resultados verdadeiramente excepcionais, resultados que você simplesmente não encontrará em <b><u><i>nenhum</i></u></b> outro lugar...<br><br>
-
- A combinação única de inovação, pesquisa científica avançada e compromisso com a sua transformação pessoal faz do "Nome do Produto" uma escolha incomparável...<br><br>
-
-Imagine-se aproveitando uma <b><u><i>sensação incomparável de vitalidade e bem-estar</i></u></b>, enquanto desfruta de uma aparência física deslumbrante...<br><br> 
-
-O "Nome do Produto" é projetado para trazer <u>resultados notáveis</u>, superando todas as suas expectativas anteriores...<br><br>
-
-<b>Acredite, você merece essa experiência excepcional...</b><br><br>
-
-Não permita que a incerteza ou a dúvida o impeçam de <u><i>alcançar o sucesso</i></u> que você tanto almeja...<br><br>
-
- <u><i>Agarre essa oportunidade única de mudar sua vida para sempre...</i></u><br><br>
-
-Os resultados que o "Nome do Produto" oferece são <u><b><i>incomparáveis e verdadeiramente transformadores</i></b></u>...<br><br>
-
-<b>Não há limites</b> para o que você pode alcançar quando você se compromete com essa jornada...<br><br>
-
-Não se contente com menos do que <b><u><i>você merece</i></u></b>...<br><br>
-
-Abra as portas para uma vida extraordinária, repleta de prazeres, conquistas e autoconfiança...<br><br>
+Estamos hablando de resultados verdaderamente excepcionales, resultados que simplemente no encontrarás en <b><u><i>ningún</i></u></b> otro lugar...<br><br>
 
 
-O "Nome do Produto" é a chave para essa jornada inigualável de transformação...<br><br>
+La combinación única de innovación, investigación científica avanzada y compromiso con tu transformación personal hace que la Frequencia Divina de Prosperidad sea una elección incomparable...<br><br>
 
-<b><u><i>Não espere mais...</i></u></b><br><br>
+Imagínate disfrutando de una<b><u><i>ssensación incomparable de vitalidad y bienestar<i></u></b> mientras disfrutas de una sensación de relajación mental y corporal. <br><br> 
 
-Permita-se embarcar nessa incrível jornada e descobrir o poder de uma transformação pessoal completa e duradoura...<br><br>
+La Frequencia Divina de Prosperidad tá diseñada para brindar <u>resultados notables</u>, superando todas tus expectativas anteriores....<br><br>
 
-Os resultados esperam por você...<br><br></h5>
+<b>Acredita, mereces disfrutar de esta experiencia excepcional....</b><br><br>
+
+No permitas que la incertidumbre o la duda te impidan <u><i>alcanzar el éxito</i></u> que tanto anhelas...<br><br>
+
+ <u><i>Aprovecha esta oportunidad única de cambiar tu vida para siempre...</i></u><br><br>
+
+Los resultados que la Frequencia Divina de Prosperidad ofrece son <u><b><i>incomparables y verdaderamente transformadores</i></b></u>...<br><br>
+
+<b>
+No hay límites</b> para lo que puedes alcanzar cuando te comprometes con este viaje...<br><br>
+
+No te conformes con menos <b><u><i>de lo que mereces</i></u></b>...<br><br>
+
+Abre las puertas a una vida extraordinaria, llena de salud, logros y prosperidad...<br><br>
+
+
+Frequencia Divina de Prosperidad es la clave para este viaje incomparable de transformación...<br><br>
+
+<b><u><i>No esperes más...</i></u></b><br><br>
+
+Permite-te embarcar en este increíble viaje y descubrir el poder de una transformación personal completa y duradera...<br><br>
+
+Los resultados te esperan...<br><br></h5>
                 <br>
                 <a href="https://pay.hotmart.com/W75115719G?off=i28b6yhu&checkoutMode=10" class="btn btn-success btn-lg btn-block" style="text-decoration: none;"><br><span class="span-btn">COMPRAR AGORA!</span></br></a>
                 <br>
@@ -147,11 +149,11 @@ Os resultados esperam por você...<br><br></h5>
     </header>
     <footer class="bg-white py-3 text-center">
 
-    <span style="color:#6C757D">Copyright 2023 – Bem-estar e Saúde ®
-        <br>Todos os direitos reservados</span><br><br>
+    <span style="color:#6C757D">Copyright 2023 – Bienestar y Salud ®
+        <br>Todos los derechos reservados.</span><br><br>
 
-      <div class="text-secondary"><a href="termos.html" class="text-secondary">Termos de Uso</a> – <a href="privacidade.html"
-          class="text-secondary">Políticas de Privacidade</a></div><br>
+      <div class="text-secondary"><a href="termos.html" class="text-secondary">Términos de Uso</a> – <a href="privacidade.html"
+          class="text-secondary">Políticas de Privacidad</a></div><br>
         
 <script>
     let prefix = ["https://payment.hotmart.com", "https://pay.hotmart.com", "https://go.hotmart.com"];
