--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
     <span style="color:#6C757D">Copyright 2024 – Contenido Exclusivo ®
         <br>Todos los derechos reservados.</span><br><br>
 
-      <div class="text-secondary"><a href="termos.html" class="text-secondary">Términos de usoo</a> – <a href="privacidade.html"
+      <div class="text-secondary"><a href="termos.html" class="text-secondary">Términos de uso</a> – <a href="privacidade.html"
           class="text-secondary">Política de privacidad</a></div><br>
 
 <script>
