--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/L92745545U?checkoutMode=2" class="btn btn-success btn-lg btn-block" style="text-decoration: none;">
               <br>
-              <span class="span-btn">QUIERO ASEGURAR ACCESO!</span>   
+              <span class="span-btn">COMPRAR AHORA</span>   
               <br>
               </a>
             </div>
@@ -496,7 +496,7 @@ function getParams() {
   </footer>
 
       <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 16000000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 300000); // temporização da Call to Action (em milissegundos)
     </script>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
