--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
   
 <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/L92745545U?off=nloonxrx&bid=1714443330969" class="btn btn-success btn-lg btn-block" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/L92745545U?checkoutMode=2" class="btn btn-success btn-lg btn-block" style="text-decoration: none;">
               <br>
               <span class="span-btn">COMPRAR AHORA!</span>
               <br>
