--- a/br/index.html
+++ b/br/index.html
@@ -99,7 +99,7 @@ Asegura ahora mismo tu "Frecuencia Divina de Prosperidade" com este descuento es
 
 ¡Únete a nosotros y experimenta los increíbles resultados que la Frequencia Divina de Prosperidad puede proporcionar!<br><br></h5>
                 <br>
-                <a href="https://pay.hotmart.com/L92745545U?off=jts0df2z" class="btn btn-success btn-lg btn-block" style="text-decoration: none;"><br><span class="span-btn">COMPRAR AGORA!</span></br></a>
+                <a href="https://pay.hotmart.com/E93161410E?off=h2iyiq3r" class="btn btn-success btn-lg btn-block" style="text-decoration: none;"><br><span class="span-btn">COMPRAR AGORA!</span></br></a>
                 
                     <br><br><h5>¡Esta opción abrirá una nueva y emocionante etapa en tu vida, <u>repleta de placeres y logros</u>!<br><br>
 
@@ -142,7 +142,7 @@ Permite-te embarcar en este increíble viaje y descubrir el poder de una transfo
 
 Los resultados te esperan...<br><br></h5>
                 <br>
-                <a href="https://pay.hotmart.com/L92745545U?off=jts0df2z" class="btn btn-success btn-lg btn-block" style="text-decoration: none;"><br><span class="span-btn">COMPRAR AGORA!</span></br></a>
+                <a href="https://pay.hotmart.com/E93161410E?off=h2iyiq3r" class="btn btn-success btn-lg btn-block" style="text-decoration: none;"><br><span class="span-btn">COMPRAR AGORA!</span></br></a>
                 <br>
                 <br>
                 
