--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
           <!-- VSL -->
         <div id="vid_6628521105334f0008a07449" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_6628521105334f0008a07449" src="https://images.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/6628521105334f0008a07449/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_6628521105334f0008a07449" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_6628521105334f0008a07449"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/8e8134b7-1387-47a0-a342-da487da0ad90/players/6628521105334f0008a07449/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>
            
-          <link rel="prerender" href="https://pay.hotmart.com/L92745545U?checkoutMode=2"/>
+          <link rel="prerender" href="https://pay.hotmart.com/E93161410E?checkoutMode=2&off=79tvw7nv"/>
 
           <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.hotmart.com/L92745545U?checkoutMode=2" class="btn btn-success btn-lg btn-block" style="text-decoration: none;">
+              <a href="https://pay.hotmart.com/E93161410E?checkoutMode=2&off=79tvw7nv" class="btn btn-success btn-lg btn-block" style="text-decoration: none;">
               <br>
               <span class="span-btn">COMPRAR AHORA</span>   
               <br>
